gcc/testsuite/rust/rustc/ui/resolve/resolve-dont-hint-macro.rs
fn main() {
    let zero = assert_eq::<()>();
// { dg-error ".E0423." "" { target *-*-* } .-1 }
}

